<resources>
    <string name="app_name">MadApp</string>
    <string name="welcome">WELCOME</string>
    <string name="explore"><![CDATA[Explore>>]]></string>
    <string name="user_name_email">User Name / Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="signup">SignUp</string>
    <string name="view_your_products">View Your Products</string>
    <string name="add_new">Add New</string>
    <string name="seller">Seller...</string>
    <string name="become_a">Become a</string>
    <string name="user_name">User Name</string>
    <string name="e_mail">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="password1">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="signup2">SignUp</string>
    <string name="your">Your</string>
    <string name="products">Products...</string>
    <string name="new_handmade_pots">New Handmade pots</string>
    <string name="are_you_looking_for_unique_and_beautiful_handmade_pots_to_add_to_your_home_or_garden_look_no_further_than_our_collection_of_exquisite_pottery_pieces">Are you looking for unique and beautiful handmade pots to add to your home or garden? Look no further than our collection of exquisite pottery pieces!</string>
    <string name="rs_1300_00">Rs.1300.00</string>
    <string name="next">Add Product</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="location_address">Location Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="title">Title and Category</string>
    <string name="item">Item...</string>
    <string name="add_your">Add your</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="add_images">Add Images</string>
    <string name="your_product_added">Your Product Added</string>
    <string name="successfully">Successfully</string>
    <string name="view">View</string>
    <string name="select_photo">Select Photo</string>
</resources>